# pyday2020-counting-votes-with-dask

./: .gitignore  1_one_file.ipynb  2_find_out_winner.ipynb  3_stop_the_count.ipynb  4_voting_twice.ipynb  README.md  pyproject.toml
data/: region_delegates.csv
